--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shakib Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <section class="top-banner">
+    <div class="half-width">
+      <h1>Welcome To</h1>
+      <h1><span>Love Bird</span> World</h1>
+      <h3>I love Birds</h3>
+      <p>Birds are those living beings that can fly high in the sky. Birds have big feathers that help them to lift their
+         bodies in the air. There are hundreds of types of birds on Earth and each of them is unique.</p>
+      <a class="link-button" href="https://www.linkedin.com/in/shakib-ahmed-017915229" target="_blank">HIRE ME</a>
+    </div>
+    <div class="half-width">
+      <img src="img/shakib.png" alt="My photo">
+    </div>
+  </section>
 </body>
 </html>
