--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class="top-banner">
     <div class="half-width">
       <h1>Welcome To</h1>
-      <h1><span>Love Bird</span> World</h1>
+      <h1><span>Shakib Ahmed</span> portfolio</h1>
       <h3>I love Birds</h3>
       <p>Birds are those living beings that can fly high in the sky. Birds have big feathers that help them to lift their
          bodies in the air. There are hundreds of types of birds on Earth and each of them is unique.</p>
@@ -22,6 +22,17 @@
     </div>
     <div class="half-width">
       <img src="img/shakib.png" alt="My photo">
+    </div>
+  </section>
+  <section class="dream-big">
+    <div>
+      <img src="img/shakib2.png" alt="photo">
+    </div>
+    <div class="half-width">
+      <h1>Dream Big</h1>
+      <h2>Become a web Developer</h2>
+      <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+      <a class="link-button" target="_blank" href="#">DOWNLOAD RESUME</a>
     </div>
   </section>
 </body>
